[workspace]
resolver = "2"
members = ["crates/binary-dumper", "crates/binary-runner", "crates/binary-static-runner"]

[workspace.dependencies]
sp1-core-executor = "6.0.2"
sp1-core-machine = "6.0.2"
sp1-jit = "6.0.2"
sp1-primitives = "6.0.2"

bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
sp1-core-executor = { git = "https://github.com/wakabat/sp1", branch = "xuejie/perf-experiments" }
sp1-core-machine = { git = "https://github.com/wakabat/sp1", branch = "xuejie/perf-experiments" }
sp1-jit = { git = "https://github.com/wakabat/sp1", branch = "xuejie/perf-experiments" }
sp1-primitives = { git = "https://github.com/wakabat/sp1", branch = "xuejie/perf-experiments" }
